--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 						<table>
 							<tr>
 								<td class="title">
-									<img src="https://www.sparksuite.com/images/logo.png" style="width: 100%; max-width: 300px" />
+									<img src="/Users/andyjimenez/Repos/Invoice/images/ALARPSD-blk-2.webp" style="width: 100%; max-width: 300px" />
 								</td>
 
 								<td>
@@ -125,9 +125,9 @@
 						<table>
 							<tr>
 								<td>
-									Sparksuite, Inc.<br />
+									Alaria Corporation<br />
 									12345 Sunny Road<br />
-									Sunnyville, CA 12345
+									Laguna Niguel, CA 12345
 								</td>
 
 								<td>
