--- a/index.html
+++ b/index.html
@@ -159,19 +159,19 @@
 				</tr>
 
 				<tr class="item">
-					<td>Website design</td>
+					<td>Your Product or Service</td>
 
 					<td>$300.00</td>
 				</tr>
 
 				<tr class="item">
-					<td>Hosting (3 months)</td>
+					<td>Your Product or Service</td>
 
 					<td>$75.00</td>
 				</tr>
 
 				<tr class="item last">
-					<td>Domain name (1 year)</td>
+					<td>Your Product or Service</td>
 
 					<td>$10.00</td>
 				</tr>
