Made text editable

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 	<body>
 		<div class="invoice-box">
+            <div contenteditable="true">
 			<table cellpadding="0" cellspacing="0">
 				<tr class="top">
 					<td colspan="2">
@@ -111,9 +112,11 @@
 								</td>
 
 								<td>
+                                    <div contenteditable="true">
 									Invoice #: 123<br />
 									Created: January 1, 2015<br />
 									Due: February 1, 2015
+                                </div>
 								</td>
 							</tr>
 						</table>
@@ -125,15 +128,19 @@
 						<table>
 							<tr>
 								<td>
+                                    <div contenteditable="true">
 									Alaria Corporation<br />
 									12345 Sunny Road<br />
 									Laguna Niguel, CA 12345
+                                </div>
 								</td>
 
 								<td>
+                                    <div contenteditable="true">
 									Acme Corp.<br />
 									John Doe<br />
 									john@example.com
+                                </div>
 								</td>
 							</tr>
 						</table>
@@ -145,8 +152,9 @@
 
 					<td>Check #</td>
 				</tr>
-
+            
 				<tr class="details">
+                    
 					<td>Check</td>
 
 					<td>1000</td>
@@ -183,5 +191,6 @@
 				</tr>
 			</table>
 		</div>
+    </div>
 	</body>
 </html>
