--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<table>
 							<tr>
 								<td class="title">
-									<img src="http://www.990wbob.com/uploads/1/0/2/5/10259617/659383134_orig.png" style="width: 100%; max-width: 300px" />
+									<img src="https://raw.githubusercontent.com/ufosarehere/Invoice/master/ALARPSD-blk-2.webp" style="width: 100%; max-width: 300px" />
 								</td>
 
 								<td>
