--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<table>
 							<tr>
 								<td class="title">
-									<img src="https://raw.githubusercontent.com/ufosarehere/Invoice/master/ALARPSD-blk-2.webp" style="width: 100%; max-width: 300px" />
+									[Your Company]
 								</td>
 
 								<td>
